--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body 
 {
     background-color: black;
+    background-image: url("BodyBackground.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center; 
 }
 
 #nav {
@@ -8,23 +13,14 @@ body
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #3d3d3d;
+    background-color: #000000;
     text-align: center;
-    width: 100%;
+    width: 60%;
     position: fixed;
-    font-style: italic;
-}
-
-article
-{
-    padding: 1rem;
-    background-color: #333333;
-    margin: 1rem;
-}
-
-article p
-{
-    padding-left: 2rem;
+    font-style: normal;
+    margin-left:20%;
+    margin-right:20%;
+    box-shadow: 0 3rem #0005;
 }
 
 #nav li {
@@ -33,15 +29,59 @@ article p
 
 #nav li a {
     display: inline-block;
-    color: lightgrey;
-    font-size: 2rem;
+    color: #d86654;
+    font-size: 1.5rem;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 12px;
     text-decoration: none;
+    font-weight: bold;
+    text-shadow: 0 0 6px #9b493c;
+    -webkit-transition: background-color 0.5s; /* Safari */
+    transition: background-color 0.5s;
 }
 
 #nav li a:hover {
-    background-color: #111;
+    background-color: #563434;
+}
+
+article
+{
+    padding: 1rem;
+    background-color: #333333;
+    margin: 1rem;
+    border-style: solid;
+    border-width: 0 0 5px 0 ;
+    border-color: #363;
+}
+
+article:nth-child(odd)
+{
+    border-color: #d86654;
+}
+
+h3
+{
+    font-size: 1.2rem;
+    float: left;
+    font-size: 1rem;
+    width: 75%;
+    word-wrap: break-word;
+}
+
+h3:nth-child(2) {
+    float: right;
+    text-align: right;
+    width: 25%;
+}
+
+p
+{
+    display: inline-block;
+}
+
+article p
+{
+    padding-left: 2rem;
 }
 
 #page
@@ -50,31 +90,50 @@ article p
     padding-bottom:2rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    margin-left:10%;
-    margin-right:10%;
-    background-color: #212121;
+    margin-left:20%;
+    margin-right:20%;
+    background-color: #222;
     color: lightgrey;
 }
 
-@media (max-width: 40rem) 
+@media (max-width: 100rem) 
 {
     #page
     {
-    padding-top:1rem;
-    margin-left:0;
-    margin-right:0;
+        margin-left:5%;
+        margin-right:5%;
     }  
     
+    #nav
+    {
+        margin-left:5%;
+        margin-right:5%;
+        width: 90%;
+    }  
+}
+
+@media (max-width: 80rem) 
+{
     #nav li 
     {
-    display: block;
+        display: block;
     }
-    
+
     #nav li a {
-    width: 100%;
-}
-    
+        width: 100%;
+    }
+
     #nav {
-    position: relative;
-}
+        margin-left:0;
+        margin-right:0;
+        position: relative;
+        width: 100%;
+    }
+
+    #page
+    {
+        padding-top:1rem;
+        margin-left:0;
+        margin-right:0;
+    }  
 }
