--- a/style.css
+++ b/style.css
@@ -24,6 +24,23 @@ body
     box-shadow: 0 0.5rem #06173355;
 }
 
+footer
+{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 0.35rem;
+    padding-top: 0.35rem;
+    margin-bottom: 0.5rem;
+    margin-left:20%;
+    margin-right:20%;
+    background-color: #2d3f5e;
+}
+
+#footer
+{
+color: white;
+}
+
 #nav li {
     display: inline-block;
     width: 8rem;
@@ -45,6 +62,64 @@ body
     background-color: #061733;
     -webkit-transition: background-color 0.5s, color 0.5s; /* Safari */
     transition: background-color 0.5s, color 0.5s; 
+}
+
+#triangle-up 
+{ 
+    float: right;
+    width: 0; 
+    height: 0; 
+    border-left: 0.5rem solid transparent; 
+    border-right: 0.5rem solid transparent; 
+    border-bottom: 1rem solid #061733;
+}
+
+#toTop
+{
+    position: relative;
+    display: inline-block;
+    float: right;
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    color: #06173300;
+    font-weight: 800;
+    text-align: center;
+    border-radius:1rem;
+    margin-right: 1.5rem;
+    background-color: #d8a406;
+    -webkit-transition: width 0.5s, color ease-in-out 0.2s; /* Safari */
+    transition: width 0.5s, color ease-in-out 0.2s;
+
+}
+
+#toTop::after
+{
+    background-image: url("arrow.png");
+    background-repeat:  no-repeat; 
+    content : "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity : 1;
+    z-index: 1;
+    -webkit-transition: opacity 0.2s;
+    transition: opacity 0.2s;
+}
+
+#toTop:hover::after
+{      
+    opacity: 0;
+}
+
+
+#toTop:hover
+{      
+    color: #061733;
+    width: 8rem;
 }
 
 #nav li a:hover {
@@ -90,13 +165,15 @@ h3:nth-child(2) {
 
 #page
 {
+    overflow: auto;
     padding-top:5rem;
-    padding-bottom:2rem;
+    padding-bottom:1.5rem;
+    margin-bottom: 0.5rem;
     padding-left: 2rem;
     padding-right: 2rem;
     margin-left:20%;
     margin-right:20%;
-    background-color: #2d3f5eEE;
+    background-color: #2d3f5e;
     color: lightgrey;
 }
 
