--- a/style.css
+++ b/style.css
@@ -155,14 +155,36 @@ footer
     -moz-border-radius: 2rem;
 }
 
+table, th, td {
+    border-collapse:  collapse;
+}
+
+th,td
+{
+    min-width: 8rem;
+}
+
 .weapons
 {
     margin: 0 auto;
 }
 
-.weapons tr:nth-child(odd)
+.weapons tr:nth-child(even)
 {
     background-color: #061733;
+}
+
+#e404
+{
+    text-align: center;
+    font-size: 24rem;
+    color: #d8a406;
+}
+
+.weapons tr:first-child
+{
+    background-color: #d8a406;
+    color: black;
 }
 
 .weapons th
@@ -176,7 +198,9 @@ section
     margin: 1.5rem;
     padding: 2rem;
     width: auto;
-    background-color: #212f45;
+    border: 0.3rem solid #061733;
+    background-color: transparent;
+    border-radius: 1rem;
 }
 
 #toTop:hover
@@ -262,6 +286,21 @@ h3:nth-child(2) {
     {
         display: block;
         width: 100%;
+    }
+    
+    section
+    {
+        padding: 0;
+        margin-left: 0;
+        margin-right: 0;
+        border-width: 0;
+        
+    }
+    
+    article
+    {
+        margin-left: 0.1rem;
+        margin-right: 0.1rem;
     }
 
     #nav li a {
