--- a/style.css
+++ b/style.css
@@ -91,48 +91,17 @@ footer
 #toTop
 {
     position: relative;
-    display: inline-block;
     float: right;
-    float: right;
-    width: 2rem;
+    width: 8rem;
     height: 2rem;
     line-height: 2rem;
-    color: #06173300;
+    color: #061733FF;
     font-weight: 800;
     text-align: center;
     border-radius:1rem;
     margin-right: 1.5rem;
     background-color: #d8a406;
-    -webkit-transition: width 0.5s, color ease-in-out 0.2s; /* Safari */
-    transition: width 0.5s, color ease-in-out 0.2s;
-}
-
-#leftToTop
-{
-    float: left;
-    width: 100%;
-}
-
-#toTop::after
-{
-    background-image: url("arrow.png");
-    background-repeat:  no-repeat; 
-    content : "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity : 1;
-    z-index: 1;
-    -webkit-transition: opacity 0.2s;
-    transition: opacity 0.2s;
-}
-
-#toTop:hover::after
-{      
-    opacity: 0;
+    margin-left: 100%;
 }
 
 .galery
@@ -203,12 +172,6 @@ section
     border-radius: 1rem;
 }
 
-#toTop:hover
-{      
-    color: #061733;
-    width: 8rem;
-}
-
 #nav li a:hover {
     background-color: #4a89f7;
     color: #000;
@@ -264,7 +227,7 @@ h3:nth-child(2) {
     color: lightgrey;
 }
 
-@media (max-width: 100rem) 
+@media (max-width: 110rem) 
 {
     #page
     {
@@ -278,25 +241,31 @@ h3:nth-child(2) {
         margin-right:5%;
         width: 90%;
     }  
+
+    footer
+    {
+        margin-left:5%;
+        margin-right:5%;
+    }
 }
 
-@media (max-width: 80rem) 
+@media (max-width: 60rem) 
 {
     #nav li 
     {
         display: block;
         width: 100%;
     }
-    
+
     section
     {
         padding: 0;
         margin-left: 0;
         margin-right: 0;
         border-width: 0;
-        
+
     }
-    
+
     article
     {
         margin-left: 0.1rem;
@@ -317,7 +286,30 @@ h3:nth-child(2) {
     #page
     {
         padding-top:1rem;
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
+        padding-bottom: 3.5rem;
         margin-left:0;
         margin-right:0;
-    }  
+        margin-bottom: 0;
+    } 
+
+    footer
+    {
+        margin-left:0;
+        margin-right:0;
+        margin-bottom: 0;
+    }
+
+    #toTop
+    {
+        position: absolute;
+        right: 1rem;
+    }
+    
+    .img {
+    width:  75%;
+    height: auto;
+}
+
 }
