--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body
     background-position: center; 
     height: 16rem;
     border-radius: 1rem;
+
 }
 
 #nav {
@@ -75,6 +76,11 @@ footer
     background-color: #061733;
     -webkit-transition: background-color 0.5s, color 0.5s; /* Safari */
     transition: background-color 0.5s, color 0.5s; 
+}
+
+a:link 
+{
+    color: #d8a406;
 }
 
 #triangle-up 
