--- a/style.css
+++ b/style.css
@@ -78,11 +78,6 @@ footer
     transition: background-color 0.5s, color 0.5s; 
 }
 
-a:link 
-{
-    color: #d8a406;
-}
-
 #triangle-up 
 { 
     float: right;
@@ -96,17 +91,48 @@ a:link
 #toTop
 {
     position: relative;
+    display: inline-block;
     float: right;
-    width: 8rem;
+    float: right;
+    width: 2rem;
     height: 2rem;
     line-height: 2rem;
-    color: #061733FF;
+    color: #06173300;
     font-weight: 800;
     text-align: center;
     border-radius:1rem;
     margin-right: 1.5rem;
     background-color: #d8a406;
-    margin-left: 100%;
+    -webkit-transition: width 0.5s, color ease-in-out 0.2s; /* Safari */
+    transition: width 0.5s, color ease-in-out 0.2s;
+}
+
+#leftToTop
+{
+    float: left;
+    width: 100%;
+}
+
+#toTop::after
+{
+    background-image: url("arrow.png");
+    background-repeat:  no-repeat; 
+    content : "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity : 1;
+    z-index: 1;
+    -webkit-transition: opacity 0.2s;
+    transition: opacity 0.2s;
+}
+
+#toTop:hover::after
+{      
+    opacity: 0;
 }
 
 .galery
@@ -167,6 +193,18 @@ th,td
     height: 4rem;
 }
 
+.special
+{
+    width: 4rem;
+    height: 4rem;	
+}
+
+.companion
+{
+	text-align: left;
+	align-content: left;
+}
+
 section
 {
     margin: 1.5rem;
@@ -175,6 +213,12 @@ section
     border: 0.3rem solid #061733;
     background-color: transparent;
     border-radius: 1rem;
+}
+
+#toTop:hover
+{      
+    color: #061733;
+    width: 8rem;
 }
 
 #nav li a:hover {
@@ -232,7 +276,7 @@ h3:nth-child(2) {
     color: lightgrey;
 }
 
-@media (max-width: 110rem) 
+@media (max-width: 100rem) 
 {
     #page
     {
@@ -246,31 +290,25 @@ h3:nth-child(2) {
         margin-right:5%;
         width: 90%;
     }  
-
-    footer
-    {
-        margin-left:5%;
-        margin-right:5%;
-    }
 }
 
-@media (max-width: 60rem) 
+@media (max-width: 80rem) 
 {
     #nav li 
     {
         display: block;
         width: 100%;
     }
-
+    
     section
     {
         padding: 0;
         margin-left: 0;
         margin-right: 0;
         border-width: 0;
-
+        
     }
-
+    
     article
     {
         margin-left: 0.1rem;
@@ -291,30 +329,7 @@ h3:nth-child(2) {
     #page
     {
         padding-top:1rem;
-        padding-left: 0.3rem;
-        padding-right: 0.3rem;
-        padding-bottom: 3.5rem;
         margin-left:0;
         margin-right:0;
-        margin-bottom: 0;
-    } 
-
-    footer
-    {
-        margin-left:0;
-        margin-right:0;
-        margin-bottom: 0;
-    }
-
-    #toTop
-    {
-        position: absolute;
-        right: 1rem;
-    }
-    
-    .img {
-    width:  75%;
-    height: auto;
-}
-
+    }  
 }
