--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ body
     z-index: 1;
 }
 
+#nav  li
+{
+    padding: 0rem;
+}
+
 footer
 {
     padding-left: 2rem;
@@ -53,6 +58,22 @@ footer
 #footer
 {
     color: white;
+    min-height: 3rem;
+    overflow: auto;
+}
+
+#footer p:nth-child(1)
+{
+    display: inline-block;
+    width: 50%;
+    float: left;
+}
+
+#footer p:nth-child(2)
+{
+        display: inline-block;
+    width: 50%;
+    float: right;
 }
 
 #nav li {
@@ -78,6 +99,11 @@ footer
     transition: background-color 0.5s, color 0.5s; 
 }
 
+a:link 
+{
+    color: #d8a406;
+}
+
 #triangle-up 
 { 
     float: right;
@@ -91,48 +117,17 @@ footer
 #toTop
 {
     position: relative;
-    display: inline-block;
     float: right;
-    float: right;
-    width: 2rem;
+    width: 8rem;
     height: 2rem;
     line-height: 2rem;
-    color: #06173300;
+    color: #061733FF;
     font-weight: 800;
     text-align: center;
     border-radius:1rem;
     margin-right: 1.5rem;
     background-color: #d8a406;
-    -webkit-transition: width 0.5s, color ease-in-out 0.2s; /* Safari */
-    transition: width 0.5s, color ease-in-out 0.2s;
-}
-
-#leftToTop
-{
-    float: left;
-    width: 100%;
-}
-
-#toTop::after
-{
-    background-image: url("arrow.png");
-    background-repeat:  no-repeat; 
-    content : "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity : 1;
-    z-index: 1;
-    -webkit-transition: opacity 0.2s;
-    transition: opacity 0.2s;
-}
-
-#toTop:hover::after
-{      
-    opacity: 0;
+    margin-left: 100%;
 }
 
 .galery
@@ -159,6 +154,11 @@ table, th, td {
     border-collapse:  collapse;
 }
 
+.settle th,td
+{
+    text-align: left;
+}
+
 th,td
 {
     min-width: 8rem;
@@ -169,9 +169,25 @@ th,td
     margin: 0 auto;
 }
 
-.weapons tr:nth-child(even)
+li
+{
+    padding: 1rem;
+}
+
+table tr:nth-child(odd),ul li:nth-child(odd)
+{
+    background-color: #2d3f5e;
+}
+
+table tr:nth-child(even),ul li:nth-child(even)
 {
     background-color: #061733;
+}
+
+table tr:first-child
+{
+    background-color: #d8a406;
+    color: black;
 }
 
 #e404
@@ -181,28 +197,10 @@ th,td
     color: #d8a406;
 }
 
-.weapons tr:first-child
-{
-    background-color: #d8a406;
-    color: black;
-}
-
 .weapons th
 {
     width: 10rem;
     height: 4rem;
-}
-
-.special
-{
-    width: 4rem;
-    height: 4rem;	
-}
-
-.companion
-{
-	text-align: left;
-	align-content: left;
 }
 
 section
@@ -213,12 +211,6 @@ section
     border: 0.3rem solid #061733;
     background-color: transparent;
     border-radius: 1rem;
-}
-
-#toTop:hover
-{      
-    color: #061733;
-    width: 8rem;
 }
 
 #nav li a:hover {
@@ -235,6 +227,7 @@ article
     border-style: solid;
     border-width: 0 0 3px 0 ;
     border-color: #4a89f7;
+    overflow: auto;
 }
 
 article:nth-child(odd)
@@ -276,7 +269,7 @@ h3:nth-child(2) {
     color: lightgrey;
 }
 
-@media (max-width: 100rem) 
+@media (max-width: 110rem) 
 {
     #page
     {
@@ -290,6 +283,12 @@ h3:nth-child(2) {
         margin-right:5%;
         width: 90%;
     }  
+
+    footer
+    {
+        margin-left:5%;
+        margin-right:5%;
+    }
 }
 
 @media (max-width: 80rem) 
@@ -299,16 +298,16 @@ h3:nth-child(2) {
         display: block;
         width: 100%;
     }
-    
+
     section
     {
         padding: 0;
         margin-left: 0;
         margin-right: 0;
         border-width: 0;
-        
+
     }
-    
+
     article
     {
         margin-left: 0.1rem;
@@ -329,7 +328,30 @@ h3:nth-child(2) {
     #page
     {
         padding-top:1rem;
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
+        padding-bottom: 3.5rem;
         margin-left:0;
         margin-right:0;
-    }  
+        margin-bottom: 0;
+    } 
+
+    footer
+    {
+        margin-left:0;
+        margin-right:0;
+        margin-bottom: 0;
+    }
+
+    #toTop
+    {
+        position: absolute;
+        right: 1rem;
+    }
+
+    .img {
+        width:  75%;
+        height: auto;
+    }
+
 }
