--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ a:link
     color: #d8a406;
 }
 
+a:visited 
+{
+    color: #9e7807;
+}
+
 #triangle-up 
 { 
     float: right;
@@ -172,6 +177,7 @@ table, th, td {
 .settle th,td
 {
     text-align: left;
+    padding: 0.75rem;
 }
 
 th,td
@@ -256,16 +262,16 @@ section > h2
     padding-left: 2rem;
 }
 
-h3
+article h3
 {
     font-size: 1.2rem;
     float: left;
     font-size: 1rem;
-    width: 100%;
+    width: 75%;
     word-wrap: break-word;
 }
 
-h3:nth-child(2) {
+article h3:nth-child(2) {
     float: right;
     text-align: right;
     width: 25%;
